# superpullrs

./: .gitignore  Cargo.toml  Dockerfile.mock-azure  Dockerfile.mock-github  README.md  docker-compose.test.yml
.github/: copilot-instructions.md
.github/workflows/: build.yml  integration.yml
src/: azure_devops.rs  bitbucket.rs  cli.rs  clone_options.rs  clone_task_manager.rs  debug_utils.rs  filter_options.rs  forgejo.rs  git.rs  gitea.rs  github.rs  gitlab.rs  main.rs  process_manager.rs  symlink_manager.rs
tests/: README.md  azure_devops_tests.rs  bitbucket_tests.rs  docker_helpers.rs  forgejo_tests.rs  gitea_tests.rs  github_tests.rs  gitlab_tests.rs  integration_tests.rs
