[package]
name = "superpull"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
colored = "2"
walkdir = "2"
base64 = "0.22"
axum = { version = "0.7", optional = true }
quinn-proto = "0.11.14"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]

[[bin]]
name = "mock-github-server"
path = "src/bin/mock_github_server.rs"
required-features = ["mock-server"]

[[bin]]
name = "mock-azure-server"
path = "src/bin/mock_azure_server.rs"
required-features = ["mock-server"]

[features]
mock-server = ["axum"]
